--- a/src/webapp/WEB-INF/pages/users.html
+++ b/src/webapp/WEB-INF/pages/users.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>All Users</title>
+    <title>Все пользователи</title>
 </head>
 <body>
-<th:block th:each="user : ${users}">
-    <p th:text="${user.toString()}"></p>
-</th:block>
+<div th:align="center">
+    <h2>Список пользователей</h2>
+    <a th:href="@{/add}">Add User</a>
+    <br/><br/>
+    <table th:border="1" th:cellpadding="12">
+        <tr>
+            <th>Name</th>
+            <th>Last Name</th>
+            <th>Age</th>
+            <th>City</th>
+            <th>Actions</th>
+        </tr>
+        <tbody>
+        <tr th:each="user: ${userList}">
+            <td th:text="${user.getFirstName}">First Name</td>
+            <td th:text="${user.getLastName}">Last Name</td>
+            <td th:text="${user.getAge}">Age</td>
+            <td th:text="${user.getCity}">City</td>
+            <td><a th:href="@{/update/{userId}(userId=${user.getId})}"> Edit </a></td>
+            <td><a th:href="@{/delete/{userId}(userId=${user.getId})}"> Delete </a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
